--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Django==1.7.7
-Pillow==2.7.0
+Django==1.8
+Pillow==2.8.1
 argparse==1.2.1
 django-autoslug==1.7.2
 django-markdown-deux==1.0.5
 docutils==0.12
 markdown2==2.3.0
 psycopg2==2.6
+six==1.9.0
 wsgiref==0.1.2
