--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ argparse==1.2.1
 django-autoslug==1.7.2
 django-markdown-deux==1.0.5
 docutils==0.12
+hashids==1.1.0
 markdown2==2.3.0
 psycopg2==2.6
 six==1.9.0
