--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Django==1.9.1
+Django>=1.9.2
 Pillow==3.1.0
 argparse==1.2.1
 django-autoslug==1.9.3
 django-markdown-deux==1.0.5
+#django-markup-tags==0.1.1
 docutils==0.12
 hashids==1.1.0
 markdown2==2.3.0
