--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-Django>=1.9.2
-Pillow==3.1.0
-argparse==1.2.1
+docutils==0.12
+
+Django==1.10
 django-autoslug==1.9.3
 django-markdown-deux==1.0.5
-#django-markup-tags==0.1.1
-docutils==0.12
 hashids==1.1.0
-markdown2==2.3.0
-psycopg2==2.6.1
-six==1.10.0
-wsgiref==0.1.2
+markdown2==2.3.1
+Pillow==3.3.1
+pkg-resources==0.0.0
+psycopg2==2.6.2
